ランダムチャート作成（EMA）
乱数配列とその指数平滑移動平均値をPlotly.jsでグラフ化。

2021/3/13作成

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="button1">更新</button>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://kyosuke-fukui.github.io/plotly-latest.min.js"></script>
-    <script src="https://kyosuke-fukui.github.io/app.js"></script>
+    <script src="https://kyosuke-fukui.github.io/randomchart_20210313/plotly-latest.min.js"></script>
+    <script src="https://kyosuke-fukui.github.io/randomchart_20210313/app.js"></script>
   </body>
 </html>
